--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -20,6 +20,7 @@ body {
   position: relative;
   @include flex(row);
   .avatar {
+    @include flex(row);
     width: 100%;
     height: 28%;
     background: cadetblue;
@@ -68,4 +69,8 @@ body {
   .comment {
     margin-left: auto;
   }
+}
+//user
+.user-container {
+  justify-self: flex-end;
 }
